--- a/app/src/main/res/layout/layout_algorithmic_item.xml
+++ b/app/src/main/res/layout/layout_algorithmic_item.xml
@@ -10,6 +10,8 @@
         android:id="@+id/tv_name"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        />
 
 </RelativeLayout>
